// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`is([ 'a', 'b' ], false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b' ]
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is([], false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is({ raw: [ 'test' ] }, false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
{
  raw: [ 'test' ]
}
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is(42, false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
42
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is(null, false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`isCallInput([ [ 'hello ', '' ], 1 ], true) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'hello ', '' ], 1 ]
────────────────────────────────────────────────────
true
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`isCallInput([ [ 'not', 'template' ] ], false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'not', 'template' ] ]
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`isCallInput([ [ 'test' ] ], true) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ [ 'test' ] ]
────────────────────────────────────────────────────
true
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`isCallInput([], false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;

exports[`isCallInput(null, false) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
────────────────────────────────────────────────────
false
╠══════════════════════════════════════════════════╣ THEN RETURNS BOOLEAN
false
╚══════════════════════════════════════════════════╝"
`;
